--- a/index.html
+++ b/index.html
@@ -11,10 +11,28 @@
         <div class="box"></div>
         <nav><span><img src="Source/Netflix-logo.svg" alt=""></span>
             <div class="btn">
-                <button>English</button>
-                <button>Sign In</button>
+                <span><img src="Source/lang-icon.svg" alt=""></span><button class="btn btn-lang ">English</button>
+                <button class="btn btn-red">Sign In</button>
             </div>
         </nav>
+        <div class="hero">
+            <span>Unlimited movies, TV</span>
+            <span>shows and more</span>
+            <span>starts at ₹149. Cancel at any time.</span>
+            <span>Ready to watch? Enter your email to create or restart your membership.</span>
+            <div class="hero2">
+            <input type="email" placeholder="Email Address">
+            <button class="btn btn-red">Get Started</button>
+            </div>
+        </div>
     </div>
+    <div class="curve">
+        <div class="seperation">
+
+         </div>
+    </div>
+    <section class="trending">
+        <h2>Trending Now</h2>
+    </section>
 </body>
 </html>
