--- a/index.html
+++ b/index.html
@@ -31,8 +31,31 @@
 
          </div>
     </div>
-    <section class="trending">
-        <h2>Trending Now</h2>
+    <section>
+    <div class="trending">
+        <h2 >Trending Now</h2>
+        <div class="cards"><img src="Source/Moviecards/card1.webp" alt=""><p>1</p></div>
+        <div class="cards"><img src="Source/Moviecards/card2.webp" alt=""><p>2</p></div>
+        <div class="cards"><img src="Source/Moviecards/card3.webp" alt=""><p>3</p></div>
+        <div class="cards"><img src="Source/Moviecards/card4.webp" alt=""><p>4</p></div>
+        <div class="cards"><img src="Source/Moviecards/card5.webp" alt=""><p>5</p></div>
+    </section></div>
+    <section>
+        <div class="more">
+            <h2 >
+                More Reasons to join
+            </h2>
+            <div class="reason"><h2>Enjoy on your TV</h2><p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p></div>
+            
+            <div class="reason"><h2>Watch everywhere</h2><p>Stream unlimited movies and TV shows on your phone, tablet, laptop and TV.</p></div>
+            <div class="reason"><h2>Create profiles for kids</h2><p>Send kids on adventures with their favourite characters in a space made just for them — free with your membership.</p></div>
+        </div>
     </section>
+    <footer>
+        <p>
+            Questions ? Call 912378456 <br>
+            <SPAN> NETFLIX INDIA ALL RIGHTS RESERVED Learn More</SPAN>
+        </p>
+    </footer>
 </body>
 </html>
